# motion-generators

./: .gitignore  CMakeLists.txt  MotionGenerators.pc.cmake  README.md  package.xml
include/motion-generators/: CartesianTrajectory.hpp  HumanInputTrajectory.hpp  JointDynamicAttractor.hpp  JointTrajectory.hpp  ModifiedFourierTrajectory.hpp  MultiModifiedFourierTrajectory.hpp  PeriodicCartesianTrajectory.hpp  PulsatingJointTrajectory.hpp  SineCosineJoint.hpp  SineWaveJoint.hpp  SpaceNavTrajectory.hpp  TaskDynamicAttractor.hpp  Trajectory.hpp
orocos/: CMakeLists.txt
orocos/include/motion-generators/: CJDAOrocos.hpp  DynamicAttractor.hpp  JointDynamicAttractorOrocos.hpp  JointTrajectoryOrocos.hpp  ModifiedFourierTrajectoryOrocos.hpp  TaskDynamicAttractor.hpp
orocos/include/motion-generators/JointDynamicAttractorOrocos.hpp~refs/remotes/origin/: master
orocos/src/: CJDAOrocos.cpp  DynamicAttractor.cpp  JointDynamicAttractorOrocos.cpp  ModifiedFourierTrajectoryOrocos.cpp  SineWaveJointOrocos.cpp  TaskDynamicAttractor.cpp
python/: CMakeLists.txt  ModifiedFourierTrajectory.i  PulsatingJointTrajectory.i  RegressorCostFunction.i
python/include/motion-generators/: RegressorCostFunction.hpp
python/src/: MFTOptimizer.py  MFTOptimizerOptimized.py  OptimizerBase.py
ros/: CMakeLists.txt
ros/include/motion-generators/: HumanInputTrajectoryRos.hpp  TaskDynamicAttractorRos.hpp
ros/src/: HumanInputTrajectoryRos.cpp  TaskDynamicAttractorRos.cpp
scripts/: .tmp.stl  DisplayTrajectory.py  OptimizeBatch.bash  OptimizeTrajectory.py  test.json  test2.json  test3.json  test4.json  test5.json  test6.json  test7.json  test8.json  test9.json
tests/: CMakeLists.txt  NonParametricTestsIdealRobotExciting.cpp
